Authentication for customer and professional

--- a/app/src/main/res/layout/fragment_customer_login.xml
+++ b/app/src/main/res/layout/fragment_customer_login.xml
@@ -1,31 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+   >
 
-    <Button
-        android:id="@+id/postrequest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="Post Request" />
-
-    <Button
-        android:id="@+id/customerSignout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="200dp"
-        android:text="Sign Out" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleView"
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
         android:layout_width="match_parent"
-        android:layout_height="681dp"
-        android:layout_marginTop="50dp"
-        android:clipToPadding="false"
-        android:padding="4dp"
-        tools:listitem="@layout/services_item" />
+        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+</LinearLayout>
