Added professional dashboard -> recyclerView

--- a/app/src/main/res/layout/fragment_professional_login.xml
+++ b/app/src/main/res/layout/fragment_professional_login.xml
@@ -18,6 +18,7 @@
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="681dp"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="50dp"
         android:clipToPadding="false"
         android:padding="4dp"
@@ -30,5 +31,15 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="26dp"
         app:srcCompat="@drawable/profile" />
+
+    <TextView
+        android:id="@+id/count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="139dp"
+        android:text="TextView" />
 
 </RelativeLayout>
