--- a/app/src/main/res/layout/fragment_profile_customer.xml
+++ b/app/src/main/res/layout/fragment_profile_customer.xml
@@ -33,6 +33,7 @@
             </androidx.cardview.widget.CardView>
 
             <EditText
+                android:id="@+id/profileName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -63,6 +64,7 @@
                 android:src="@drawable/gmail" />
 
             <EditText
+                android:id="@+id/profileEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -84,11 +86,12 @@
                 android:src="@drawable/phone"/>
 
             <EditText
+                android:id="@+id/profilePhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingLeft="15dp"
-                android:text="+1 123-(456)7890"
+                android:text="12345678922"
                 android:textColor="#000"
                 android:textSize="18dp" />
 
@@ -105,6 +108,7 @@
                 android:src="@drawable/location"/>
 
             <EditText
+                android:id="@+id/profileAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
