--- a/app/src/main/res/layout/service_detail_item.xml
+++ b/app/src/main/res/layout/service_detail_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="120dp"
     android:layout_margin="4dp"
     android:background="#000"
     android:backgroundTint="#FFFFFF"
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="126dp"
         android:padding="8dp">
 
         <LinearLayout
@@ -25,11 +25,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="101dp"
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/service" />
+                app:srcCompat="@drawable/mechanic" />
         </LinearLayout>
 
         <LinearLayout
@@ -73,7 +73,7 @@
                 <TextView
                     android:id="@+id/experience"
                     android:layout_width="match_parent"
-                    android:layout_height="89dp"
+                    android:layout_height="33dp"
                     android:text="TextView"
                     android:textSize="16sp"
                     android:textStyle="bold" />
