--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,37 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="50dp"
     tools:context=".SecondFragment">
 
     <Button
         android:id="@+id/CustLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="74dp"
+        android:layout_marginTop="109dp"
+        android:backgroundTint="#FFFFFF"
         android:text="Login as Customer"
-        app:layout_constraintBottom_toTopOf="@+id/ProfLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="#04D7A2"
-        app:strokeWidth="3dp"
         android:textColor="#1D214E"
         android:textSize="20sp"
         app:cornerRadius="20dp"
-        android:backgroundTint="#FFFFFF"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#04D7A2"
+        app:strokeWidth="3dp" />
 
     <Button
         android:id="@+id/ProfLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="328dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#FFFFFF"
         android:text="Login As professional"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="#04D7A2"
-        app:strokeWidth="3dp"
         android:textColor="#1D214E"
         android:textSize="20sp"
         app:cornerRadius="20dp"
-        android:backgroundTint="#FFFFFF"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:strokeColor="#04D7A2"
+        app:strokeWidth="3dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:text="OR"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CustLogin" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
