Added landscape mode for several fragments

--- a/app/src/main/res/layout-land/fragment_profile_professional.xml
+++ b/app/src/main/res/layout-land/fragment_profile_professional.xml
@@ -232,7 +232,8 @@
                 android:hint="Enter Phone"
                 android:paddingLeft="15dp"
                 android:textColor="#000"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:inputType="number"/>
 
         </LinearLayout>
 
