--- a/app/src/main/res/layout/fragment_profile_customer.xml
+++ b/app/src/main/res/layout/fragment_profile_customer.xml
@@ -93,7 +93,8 @@
                 android:hint="Enter Phone"
                 android:paddingLeft="15dp"
                 android:textColor="#000"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:inputType="number"/>
 
         </LinearLayout>
         <LinearLayout
