--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="project.st991587084.JeelDhruvDeep.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/aboutUs"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="About Us"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/help"
+        android:orderInCategory="100"
+        android:title="Help"
         app:showAsAction="never" />
 </menu>
