--- a/app/src/main/res/layout/fragment_post_request.xml
+++ b/app/src/main/res/layout/fragment_post_request.xml
@@ -26,7 +26,7 @@
                 android:layout_height="45dp"
                 android:src="@drawable/gmail" />
 
-            <EditText
+            <TextView
                 android:id="@+id/emailpr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
